# JSPworkflows

./: .gitignore  CLAUDE.MD  PhotoJobs Launcher (Dev).applescript  PhotoJobs Launcher.applescript  README.md  bootstrap_photojobs.sh  pyproject.toml  setup_check.sh
photojobs/: cli.py
photojobs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
photojobs/commands/: csvgen.py  keywords.py  rename.py  scale.py  teams.py  verify.py
photojobs/lib/: utils.py
presets/: keywords_legacy.yml  keywords_photoday.yml
