[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photojobs"
version = "0.1.0"
description = "JSP PhotoJobs tools"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["photojobs*"]
